@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[39] --> Add AutoBanned Passive Anticheat System!
 [38] --> [Censor] Update vulgar slang.
 [37] --> Reset Duel Cooldowns, Hp, Mana, Rage and Runic Power in Astranaar.
 [36] --> [Censor] Update vulgar slang.
